Clean up and fix inteference with editable area.

--- a/gread-open-in-bg/background.html
+++ b/gread-open-in-bg/background.html
@@ -2,11 +2,9 @@
     <script>
         function open_in_background(url){
           if (!url) return;
-          chrome.windows.getCurrent(function (window) {
-            chrome.tabs.getSelected(window.id, function(tab) {
-              chrome.tabs.create({"url":url, "selected":false,
-                                  "index" : tab.index + 1});
-            });
+          chrome.tabs.getSelected(null, function(tab) {
+            chrome.tabs.create({"url":url, "selected":false,
+                                "index" : tab.index + 1});
           });
         }
         
