--- a/tab-to-the-right/options.html
+++ b/tab-to-the-right/options.html
@@ -50,7 +50,7 @@ When a new tab is created:
 <br>
 
 When a tab is closed:
-<select id="close" disabled="true">
+<select id="close">
  <option>Do nothing</option>
  <option>Select the left tab</option>
  <option>Select the right tab</option>
