--- a/unclose/popup.html
+++ b/unclose/popup.html
@@ -18,9 +18,15 @@
 
 function loadContent()
 {
-	var content = getClosed();	
-	contentDiv = document.getElementById("contentDiv");	
-	contentDiv.innerHTML = content;	
+  var content = getClosed();
+  contentDiv = document.getElementById("contentDiv");
+  contentDiv.innerHTML = content;
+  if (pageNo > 0)
+    document.getElementById("prev").disabled = false;
+  else document.getElementById("prev").disabled = true;
+  if (localStorage["actualCount"] > (pageNo+1) * nItems)
+    document.getElementById("next").disabled = false;
+  else document.getElementById("next").disabled = true;
 }
 
 </script>
@@ -32,6 +38,12 @@ function loadContent()
     <tr>
       <td>
         <button onclick="reset()">Reset</button>
+      </td>
+      <td>
+        <button id="prev" onclick="prev()">&lt;</button>
+      </td>
+      <td>
+        <button id="next" onclick="next()">&gt;</button>
       </td>
       <td style="text-align: right">
         <a href="http://github.com/wh5a/chrome/tree/master/unclose" target="_blank">
