--- a/unclose/popup.html
+++ b/unclose/popup.html
@@ -4,7 +4,8 @@
 <style type="text/css">
   #contentDiv {
     width: 400px;
-    line-height: 95%
+    line-height: 95%;
+    text-align: right
   }
   hr { margin:4px; }
   .table {
@@ -46,7 +47,8 @@ function loadContent()
         <button id="next" onclick="next()">&gt;</button>
       </td>
       <td style="text-align: right">
-        <a href="http://github.com/wh5a/chrome/tree/master/unclose" target="_blank">
+        <a href="http://github.com/wh5a/chrome/tree/master/unclose"
+           target="_blank" title="http://github.com/wh5a/chrome/tree/master/unclose">
           Homepage
         </a>
       </td>
