--- a/feed/subscribe.html
+++ b/feed/subscribe.html
@@ -16,9 +16,9 @@
   <table border="0" cellpadding="0" cellspacing="0" width="100%">
   <tr>
     <td width="80" rowspan="2">
-      <img src="feed-icon-64x64.png" alt="feed-icon" align="absmiddle" />
+      <a href="" id="feedA"> <img src="feed-icon-64x64.png"
+      alt="feed-icon" align="absmiddle" /> </a>
     </td>
-    <td height="40" valign="bottom"><b><span id="title"></span></b></td>
   </tr>
   <tr>
     <td>
@@ -27,7 +27,7 @@
           <td align="right" valign="top">
             <div>
               <span style="white-space: nowrap"
-                >Subscribe to this feed using:</span>
+                >Subscribe to <b><span id="title"></span></b> using:</span>
               <select id="readerDropdown" onChange="onSelectChanged()"></select>
             </div>
             <div style="margin-top:-6px; margin-right: -2px">
