--- a/feed/subscribe.html
+++ b/feed/subscribe.html
@@ -27,7 +27,7 @@
           <td align="right" valign="top">
             <div>
               <span style="white-space: nowrap"
-                >Subscribe to <b><span id="title"></span></b> using:</span>
+                >Subscribe to <a href="" id="feedB"><b><span id="title"></span></b></a> using:</span>
               <select id="readerDropdown" onChange="onSelectChanged()"></select>
             </div>
             <div style="margin-top:-6px; margin-right: -2px">
