Show favicons on mousemove, show texts on load.

--- a/unclose/popup.html
+++ b/unclose/popup.html
@@ -29,11 +29,11 @@ function openHome()
   });
 }
 
-document.addEventListener("mousemove", loadContent, false);
+document.addEventListener("mousemove", loadFavicon, false);
 </script>
 
 </head>
-<body>
+<body onload="loadText()">
   <div id="contentDiv"> </div>
   <table class="table" cellspacing="0" cellpadding="0" border="0" frame="void">
     <tr>
