Use sans-serif fonts.

--- a/unclose/popup.html
+++ b/unclose/popup.html
@@ -13,7 +13,10 @@
     width: 500px
   }
   a { text-decoration:none }
-  body { margin: 0 }
+  body {
+    margin: 0;
+    font-family: sans-serif;
+  }
 
 </style>
 <script src="popup.js"> </script>
