Use a clever trick for popup display.

--- a/unclose/popup.html
+++ b/unclose/popup.html
@@ -32,11 +32,10 @@ function openHome()
   });
 }
 
-document.addEventListener("mousemove", loadFavicon, false);
 </script>
 
 </head>
-<body onload="loadText()">
+<body onload="loadContent()">
   <div id="contentDiv"> </div>
   <table class="table" cellspacing="0" cellpadding="0" border="0" frame="void">
     <tr>
