--- a/tab-to-the-right/background.html
+++ b/tab-to-the-right/background.html
@@ -18,6 +18,11 @@
 var cachedTabs;
 
 function cloneTabInfo(a) {
+  /*
+  console.log("Update cache from old to new:");
+  console.log(cachedTabs);
+  console.log(a);
+  */
   cachedTabs = new Array();
   for (var tab in a) {
     cachedTabs[tab] = new Object();
@@ -47,6 +52,7 @@ function restore_options() {
 }
 
 chrome.tabs.onCreated.addListener(function(tab) {
+  //console.log("New tab created.");
   var create = localStorage["create"];
   var myIndex = tab.index;
   var selIndex = findIndex(function(x) { return x.selected; });
@@ -61,6 +67,8 @@ chrome.tabs.onCreated.addListener(function(tab) {
         chrome.tabs.move(tab.id, {
           index: selIndex + 1
         }, updateCachedTabs);
+      else // Don't forget to update the cache!!
+        updateCachedTabs();
     });    
   }
   else // Always move?
@@ -71,6 +79,14 @@ chrome.tabs.onCreated.addListener(function(tab) {
 
 chrome.tabs.onRemoved.addListener(function(tabId) {
   chrome.tabs.getAllInWindow(null, function(tabs) {
+    /*
+    console.log("Deleting a tab, the cached tabs are.");
+    console.log(cachedTabs);
+    console.log("The current tabs are.");
+    console.log(tabs);
+    console.log("The deleted tab is.");
+    console.log(tabId);
+    */
     var close = localStorage["close"];
     if (close > 0) {
       var closedIndex = findIndex(function(x) {return (x.id == tabId);});
@@ -96,6 +112,11 @@ chrome.tabs.onRemoved.addListener(function(tabId) {
 chrome.tabs.onSelectionChanged.addListener(function(tabId, _) {
   chrome.tabs.getAllInWindow(null, function(tabs) {
     // Don't update selection if a tab is being closed, and this function gets called before onRemoved
+    /*
+    console.log("Selection changed: current tabs and cached tabs");
+    console.log(tabs);
+    console.log(cachedTabs);
+    */
     if (cachedTabs.length <= tabs.length) {
       for (var tab in cachedTabs) {
         if (cachedTabs[tab].id == tabId)
