--- a/feed/background.html
+++ b/feed/background.html
@@ -5,6 +5,7 @@
 -->
 <html>
 <head>
+<script type="text/javascript" src="common.js"></script>
 <script>
   // A dictionary keyed off of tabId that keeps track of data per tab (for
   // example what feedUrl was detected in the tab).
@@ -24,8 +25,19 @@
       if (request.msg == "feedView") {
         var tab = sender.tab;
         if (!tab) return;
-        var goTo = "subscribe.html?" + encodeURIComponent(request.url);
-        chrome.tabs.update(tab.id,{url:goTo});
+        var feed_url = request.url;
+
+        // See if we need to skip the preview page and subscribe directly.
+        var url = "";
+        if (window.localStorage && window.localStorage.showPreviewPage == "No") {
+          // Skip the preview.
+          url = getReaderWithUrl(window.localStorage.defaultReader, feed_url);
+        } else {
+          // Show the preview page.
+          url = "subscribe.html?" + encodeURIComponent(feed_url);
+        }
+
+        chrome.tabs.update(tab.id,{url:url});
       }
     });
 
