--- a/feed/popup.html
+++ b/feed/popup.html
@@ -26,6 +26,7 @@
 
   a { text-decoration:none }
 </style>
+<script type="text/javascript" src="common.js"></script>
 <script>
 function feedLink(url) {
   var feed_link = document.createElement('a');
@@ -89,7 +90,7 @@ function preview(feed_url) {
   var url = "";
   if (window.localStorage && window.localStorage.showPreviewPage == "No") {
     // Skip the preview.
-    url = window.localStorage.defaultReader.replace("%s", escape(feed_url));
+    url = getReaderWithUrl(window.localStorage.defaultReader, feed_url);
   } else {
     // Show the preview page.
     url = "subscribe.html?" + encodeURIComponent(feed_url);
