Fix a regression bug.

--- a/feed/popup.html
+++ b/feed/popup.html
@@ -26,6 +26,7 @@
 
   a { text-decoration:none }
 </style>
+<script type="text/javascript" src="common.js"></script>
 <script>
 function feedLink(url) {
   var feed_link = document.createElement('a');
