--- a/feed/background.html
+++ b/feed/background.html
@@ -33,6 +33,13 @@
       var url = "subscribe.html?" + encodeURIComponent(request.href);
       url = chrome.extension.getURL(url);
       chrome.tabs.create({url: url, index: sender.tab.index});
+    } else if (request.msg == "greyIcon") {
+      feedData[sender.tab.id] = request.feeds;
+      chrome.pageAction.setTitle({ tabId: sender.tab.id,
+                                   title: "Follow changes in Google Reader..."});
+      chrome.pageAction.setIcon({ tabId: sender.tab.id,
+                                  path: "grey.png"});
+      chrome.pageAction.show(sender.tab.id);
     }
   });
 
