--- a/gmail-orig/about.html
+++ b/gmail-orig/about.html
@@ -29,7 +29,7 @@ h1 {
     margin: 0 auto;
     margin-top: 30px;
     text-align: center;
-    width: 500px;
+    width: 550px;
 }
 
 #optionsBox img {
@@ -136,6 +136,18 @@ li, h4 {
         <tr>
             <td>
                 <h2>Changelog</h2>
+                <h4>1.1.7 (2010-02-10)</h4>
+                <ul>
+                    <li>
+                        New feature: desktop notifications (might not work on all operating systems)<br />
+                        To enable this feature, <strong>go to the options page and check "Show desktop notifications"</strong>
+                    </li>   
+                    <li>Added new translations</li>   
+                    <li>Fixed: Delete now marks mail as read</li>   
+                    <li>Fixed an issue with sound notifications</li>   
+                    <li>Fixed an issue with new mail animation</li>    
+                    <li>Fixed an bug that made mail without a sender disappear</li>                   
+                </ul>
                 <h4>1.1.6 (2010-01-25)</h4>
                 <ul>
                     <li>New feature: <strong>translations</strong>!</li>                    
@@ -144,18 +156,6 @@ li, h4 {
                     <li>New layout on the options page</li>
                     <li>Fixed an issue which could make the action buttons stop working</li>
                     <li>Fixed a bug which would display "undefined" instead of the month in the preview window</li>
-                </ul>
-                <h4>1.1.5 (2009-12-27)</h4>
-                <ul>
-                    <li>Fixed an issue with sound notification that caused the extension to crash</li>
-                </ul>
-                <h4>1.1.4 (2009-12-27)</h4>
-                <ul>
-                    <li>New logo and icon sets by <strong>Alejandro Díaz</strong> (<a href="http://018012.com" target="_blank" title="visit http://018012.com">http://018012.com</a>)</li>
-                    <li>New feature: Star mail from the preview window (stars are not detected nor remembered yet)</li>  
-                    <li>Added a notification sound when new mail arrives (this feature is a bit buggy at the moment and will probably not work)</li>
-                    <li>Disabled debug logging, which should decrease memory consumption over time</li>   
-                    <li>Fixed a bug with the mailto-links</li>
                 </ul>
             </td>
         </tr>
