--- a/gmail-orig/options.html
+++ b/gmail-orig/options.html
@@ -101,9 +101,14 @@ td.left_column {
 }
 
 form {
-    width: 650px;
+    width: 700px;
     margin: 0 auto;
     padding: 0;
+}
+
+#languages {
+    font-size: 80%;
+    height: 20px;
 }
 
 .left{
@@ -189,7 +194,7 @@ function charOrdA(a, b) {
 }
 
 // Saves options to localStorage.
-var boolIdArray = new Array( "hide_count", "check_all", "force_ssl", "check_gmail_off", "open_tabs", "archive_read", "no_mailto", "sound_off", "animate_off" );
+var boolIdArray = new Array( "hide_count", "check_all", "force_ssl", "check_gmail_off", "open_tabs", "archive_read", "no_mailto", "sound_off", "animate_off", "show_notification" );
 var accounts;
 
 function save_options() {
@@ -306,7 +311,7 @@ function restore_options() {
 
 function spawnIconRow(value, description) {
     var selectionElement = document.getElementById("icon_selection");
-    selectionElement.innerHTML += '<span><input type="radio" name="icon_set" value="' + value + '" /><img src="icons/' + value + '/not_logged_in.png" /><img src="icons/' + value + '/no_new.png" /><img src="icons/' + value + '/new.png" /> <small>' + description + '</small></span><br />';
+    selectionElement.innerHTML += '<span><input type="radio" name="icon_set" value="' + value + '" id="icon_set' + value +'" /><label for="icon_set' + value +'"><img src="icons/' + value + '/not_logged_in.png" /><img src="icons/' + value + '/no_new.png" /><img src="icons/' + value + '/new.png" /> <small>' + description + '</small></span></label><br />';
 }
 
 function add_account() {
@@ -340,6 +345,29 @@ function remove_account() {
         acc_sel.size = accounts.length + 1;
     }
 }
+
+function requestUserPermission() {
+    try {
+        var checkboxUserPermission = document.getElementById('show_notification');
+        if(checkboxUserPermission.checked) {
+            if (checkUserPermission())
+                return;
+
+            if (typeof webkitNotifications != "undefined") {
+                webkitNotifications.requestPermission(function(){
+                    var permissionGranted = checkUserPermission();
+                    checkboxUserPermission.checked = permissionGranted;
+                });
+            }
+        }
+    } catch(e) { checkboxUserPermission.checked = false; }
+}
+
+function checkUserPermission() {
+    try {
+	    return (webkitNotifications.checkPermission() == 0);
+    } catch(e) { return false; }
+}
 </script>
 </head>
 <body onload="restore_options()">
@@ -359,14 +387,15 @@ function remove_account() {
         <tr>
             <td width="40%" valign="top">
                 <h3>General</h3>
-                <input type="checkbox" id="archive_read" /> Archive marks as read  <a title="Enable this setting to mark a mail as read when you archive it" style="cursor: help">?</a>
-                <br /><input type="checkbox" id="force_ssl" /> Always use SSL <a title="Enable this setting to always use SSL when accessing Google Mail" style="cursor: help">?</a>
-                <br /><input type="checkbox" id="open_tabs" /> Open compose in tab  <a title="Enable this setting to open mail composing in a new tab instead of a new window (also applies to mailto-links)" style="cursor: help">?</a>
-                <br /><input type="checkbox" id="no_mailto" /> Ignore mailto-links <a title="Enable this setting to ignore parsing of mailto-links and open them in your regular mail client instead" style="cursor: help">?</a>
-                <br /><input type="checkbox" id="sound_off" /> Turn <strong>off</strong> notification sound <a title="Disables notification sound when new mail arrives" style="cursor: help">?</a>
-                <br /><input type="checkbox" id="animate_off" /> Turn <strong>off</strong> icon animation <a title="Disables animation of the icon when there is new mail" style="cursor: help">?</a>
-                <br /><input type="checkbox" id="check_all" /> Check all folders for unread mail <a title="Enable this setting to check all folders, not only your inbox, for unread mail" style="cursor: help">?</a>
-                <br /><input type="checkbox" id="hide_count" /> Hide unread mail count <a title="Enable this setting to hide the unread count number from the browser action icon" style="cursor: help">?</a>
+                <input type="checkbox" id="show_notification" onchange="requestUserPermission()" /> <label for="show_notification"><strong>Show desktop notifications</strong></label>  <a title="Enable this setting to show a notification when new mail arrives" style="cursor: help">?</a>
+                <br /><br /><input type="checkbox" id="archive_read" /> <label for="archive_read">Archive marks as read</label>  <a title="Enable this setting to mark a mail as read when you archive it" style="cursor: help">?</a>
+                <br /><input type="checkbox" id="force_ssl" /> <label for="force_ssl">Always use SSL</label> <a title="Enable this setting to always use SSL when accessing Google Mail" style="cursor: help">?</a>
+                <br /><input type="checkbox" id="open_tabs" /> <label for="open_tabs">Open compose in tab</label>  <a title="Enable this setting to open mail composing in a new tab instead of a new window (also applies to mailto-links)" style="cursor: help">?</a>
+                <br /><input type="checkbox" id="no_mailto" /> <label for="no_mailto">Ignore mailto-links</label> <a title="Enable this setting to ignore parsing of mailto-links and open them in your regular mail client instead" style="cursor: help">?</a>
+                <br /><input type="checkbox" id="sound_off" /> <label for="sound_off">Turn <strong>off</strong> notification sound</label> <a title="Disables notification sound when new mail arrives" style="cursor: help">?</a>
+                <br /><input type="checkbox" id="animate_off" /> <label for="animate_off">Turn <strong>off</strong> icon animation</label> <a title="Disables animation of the icon when there is new mail" style="cursor: help">?</a>
+                <br /><input type="checkbox" id="check_all" /> <label for="check_all">Check all folders for unread mail</label> <a title="Enable this setting to check all folders, not only your inbox, for unread mail" style="cursor: help">?</a>
+                <br /><input type="checkbox" id="hide_count" /> <label for="hide_count">Hide unread mail count</label> <a title="Enable this setting to hide the unread count number from the browser action icon" style="cursor: help">?</a>
                 <br /><br />
                 Polling interval:  
                 <select id="poll">
@@ -381,11 +410,11 @@ function remove_account() {
             </td>
             <td valign="top">
                 <h3>Preview window</h3>
-                <input type="radio" name="preview_setting" value="0" /> Always off <a title="Disables the preview popup window (not recommended) and opens the first account with unread mail" style="cursor: help">?</a>
+                <input type="radio" name="preview_setting" id="preview_setting0" value="0" /> <label for="preview_setting0">Always off</label> <a title="Disables the preview popup window (not recommended) and opens the first account with unread mail" style="cursor: help">?</a>
                 <br />
-                <input type="radio" name="preview_setting" value="1" /> Automatic <a title="Only shows the preview window when there's unread mail" style="cursor: help">?</a>
+                <input type="radio" name="preview_setting" id="preview_setting1" value="1" /> <label for="preview_setting1">Automatic</label> <a title="Only shows the preview window when there's unread mail" style="cursor: help">?</a>
                 <br />
-                <input type="radio" name="preview_setting" value="2" /> Always on <a title="Always shows the preview window" style="cursor: help">?</a>
+                <input type="radio" name="preview_setting" id="preview_setting2" value="2" /> <label for="preview_setting2">Always on</label> <a title="Always shows the preview window" style="cursor: help">?</a>
                 <h3>Language</h3>
                 <select id="languages">
                 </select>
@@ -401,7 +430,7 @@ function remove_account() {
         <tr>
             <td colspan="3" style="background-color: #e2ffe3">
             <h3>Google Apps For Your Domain - Accounts</h3>
-            <p><input type="checkbox" id="check_gmail_off" /> Turn off regular Gmail checking <a title="Enable this setting if you don't have an account at gmail.com" style="cursor: help">?</a></p>
+            <p><input type="checkbox" id="check_gmail_off" /> <label for="check_gmail_off">Turn off regular Gmail checking</label> <a title="Enable this setting if you don't have an account at gmail.com" style="cursor: help">?</a></p>
             <p>
                 <select id="accounts" multiple style="width: 100%"></select>
                 <span style="float: right; clear: both;"><a href="javascript:add_account()" title="Add new GAFYD account">Add</a> | <a href="javascript:remove_account()" title="Remove selected account">Remove</a></span>
