--- a/feed-google/options.html
+++ b/feed-google/options.html
@@ -5,7 +5,7 @@
 -->
 <html>
 <head>
-<title>Edit feed readers</title>
+<title></title>
 <link rel="stylesheet" href="style.css" type="text/css" />
 <style>
 body {
@@ -100,6 +100,10 @@ body>* {
   padding-right: 10px;
 }
 
+.urlAssist {
+  padding-left: 30px;
+}
+
 .status {
   background-color: #FFF18A;
 }
@@ -109,7 +113,7 @@ body>* {
 <script>
 
   // Various text messages within the edit dialog.
-  var assistText = "Insert %s in the URL where the feed url should appear.";
+  var assistText = chrome.i18n.getMessage("rss_subscription_feed_url_assist");
 
   // Specifies the index of the item we are editing or -1 if adding new.
   var editingIndex = -1;
@@ -117,6 +121,9 @@ body>* {
   var editingDefault = false;
 
 function main() {
+  document.title =
+      chrome.i18n.getMessage("rss_subscription_edit_dialog_title");
+
   // Make sure the dialog is not visible.
   document.getElementById('dialogBackground').style.display = "none";
 
@@ -131,7 +138,7 @@ function main() {
     document.getElementById('alwaysUseDefault').disabled = true;
     document.getElementById('resetList').disabled = true;
 
-    alert("LocalStorage must be enabled for changing options.");
+    alert(chrome.i18n.getMessage("rss_subscription_no_localstorage"));
     return;
   }
 
@@ -154,7 +161,7 @@ function main() {
   for (i = 0; i < feedReaderList.length; ++i) {
     var description = feedReaderList[i].description;
     if (isDefaultReader(feedReaderList[i].url))
-      description += " (default)";
+      description += " " + chrome.i18n.getMessage("rss_subscription_default");
     readerListbox.add(new Option(description, feedReaderList[i].url));
   }
 
@@ -181,8 +188,8 @@ function setDefault() {
 }
 
 function resetList() {
-  if (!confirm("Are you sure you want to undo any changes " +
-               "you've made to this list?")) {
+  if (!confirm(chrome.i18n.getMessage(
+         "rss_subscription_reset_list_confirm"))) {
     return;
   }
 
@@ -221,7 +228,8 @@ function editReader(index) {
     var oldOption = readerListbox.options[editingIndex];
     document.getElementById('urlText').value = oldOption.value;
     document.getElementById('descriptionText').value =
-        oldOption.text.replace(' (default)', '');
+        oldOption.text.replace(
+            ' ' + chrome.i18n.getMessage("rss_subscription_default"), '');
     editingDefault = isDefaultReader(oldOption.value);
   }
 
@@ -231,8 +239,9 @@ function editReader(index) {
 function removeReader() {
   var index = readerListbox.selectedIndex;
   var feedReaderList = JSON.parse(window.localStorage.readerList);
-  var reply = confirm("Are you sure you want to remove '" +
-                      feedReaderList[index].description + "'?");
+  var reply =
+    confirm(chrome.i18n.getMessage("rss_subscription_remove_confirm",
+                                   feedReaderList[index].description));
   if (reply) {
     var wasDefault = isDefaultReader(feedReaderList[index].url);
     // Remove the item from the list.
@@ -319,18 +328,34 @@ function save() {
   main();
 }
 
+function init() {
+  i18nReplace('rss_subscription_options');
+  i18nReplaceImpl('addReader', 'rss_subscription_add_reader');
+  i18nReplaceImpl('editReader', 'rss_subscription_edit_reader');
+  i18nReplaceImpl('removeReader', 'rss_subscription_remove_reader');
+  i18nReplaceImpl('setDefault', 'rss_subscription_make_default_reader');
+  i18nReplaceImpl('resetList', 'rss_subscription_reset_list');
+  i18nReplace('rss_subscription_always_use_default');
+  i18nReplaceImpl('dialogHeader', 'rss_subscription_edit_dialog_title');
+  i18nReplace('rss_subscription_feed_description');
+  i18nReplace('rss_subscription_feed_url');
+  i18nReplaceImpl('save', 'rss_subscription_save_button', 'value');
+  i18nReplaceImpl('rss_subscription_close_button',
+                  'rss_subscription_close_button', 'value');
+  main();
+}
 </script>
 </head>
-<body onload="main()">
+<body onload="init()">
   <table border="0">
   <tr>
     <td valign="top" width="16">
       <img src="feed-icon-16x16.png" />
     </td>
     <td valign="middle">
-      <strong>RSS Subscription options</strong>
+      <strong id="rss_subscription_options"></strong>
     </td>
-    <td>
+    <td colspan="2">
     </td>
   </tr>
   <tr>
@@ -339,23 +364,25 @@ function save() {
             onchange="onSelectionChanged()"></select>
   </td>
   <td valign="top">
-    <button style="width:100%;" id="addReader"
-            onclick="editReader(-1)">Add</button><br />
-    <button style="width:100%;" id="editReader"
-            onclick="editReader(0)">Edit</button><br />
-    <button style="width:100%;" id="removeReader"
-            onclick="removeReader()">Remove</button><br />
-    <button style="width:100%;" id="setDefault"
-            onclick="setDefault()">Make default</button><br />
-    <button style="width:100%;" id="resetList"
-            onclick="resetList()">Reset list</button><br />
+    <button style="width:100%;" id="addReader" onclick="editReader(-1)"
+        ></button><br />
+    <button style="width:100%;" id="editReader" onclick="editReader(0)"
+        ></button><br />
+    <button style="width:100%;" id="removeReader" onclick="removeReader()"
+        ></button><br />
+    <button style="width:100%;" id="setDefault" onclick="setDefault()"
+        ></button><br />
+    <button style="width:100%;" id="resetList" onclick="resetList()"
+        ></button><br />
+  </td>
+  <td style="width: 200px;">
   </td>
   </tr>
   <tr>
-  <td colspan="3">
+  <td colspan="4">
     <input type="checkbox" id="alwaysUseDefault"
          value="alwaysUseDefault" onchange="toggleFeedPreview()"
-    >Always use my default reader when subscribing to feeds.
+    ><span id="rss_subscription_always_use_default"></span>
   </td>
   </tr>
   </table>
@@ -364,9 +391,7 @@ function save() {
     <div id="dialogHBackground">
       <div id="dialog">
 
-        <div id="dialogHeader">
-          Edit feed reader
-        </div>
+        <div id="dialogHeader"></div>
 
         <div id="dialogBody">
 
@@ -375,33 +400,32 @@ function save() {
           </div>
 
           <div class="dialogRow">
-            <div>
-              Description:
-            </div>
+            <div id="rss_subscription_feed_description"></div>
             <div>
               <input type="text" id="descriptionText" onkeyup="validateInput()">
             </div>
           </div>
 
           <div class="dialogRow">
-            <div>
-              URL:
-            </div>
+            <div id="rss_subscription_feed_url"></div>
             <div>
               <input type="text" id="urlText" onkeyup="validateInput()">
             </div>
           </div>
 
           <div class="dialogRow">
-            <div id="urlAssist"></div>
+            <div id="urlAssist" class="urlAssist"></div>
           </div>
 
           <div class="dialogRow" id="dialogContentFooter">
             <div>
-              <input type="button" id="save" value="Save" onclick="save()">
+              <input type="button" id="save"
+                     onclick="save()">
             </div>
             <div>
-              <input type="button" value="Close" onclick="hideDialog()">
+              <input type="button"
+                     id="rss_subscription_close_button"
+                     onclick="hideDialog()">
             </div>
           </div>
 
