--- a/feed-google/subscribe.html
+++ b/feed-google/subscribe.html
@@ -5,14 +5,27 @@
 -->
 <html>
 <head>
-  <title>Subscribe to feed</title>
+  <title></title>
   <link rel="stylesheet" href="style.css" type="text/css" />
   <link rel="stylesheet" href="subscribe.css" type="text/css" />
   <script type="text/javascript" src="common.js"></script>
   <script type="text/javascript" src="subscribe.js"></script>
+  <script>
+    function init() {
+      document.title =
+          chrome.i18n.getMessage("rss_subscription_default_title");
+      i18nReplace('rss_subscription_subscribe_using');
+      i18nReplace('rss_subscription_subscribe_button');
+      i18nReplace('rss_subscription_always_use');
+      i18nReplace('rss_subscription_feed_preview');
+      i18nReplaceImpl('feedUrl', 'rss_subscription_feed_link', '');
+      
+      main();
+    }
+  </script>
 </head>
 
-<body onload="main();">
+<body onload="init();">
 
   <table border="0" cellpadding="0" cellspacing="0" width="100%">
   <tr>
@@ -28,13 +41,14 @@
           <td align="right" valign="middle">
             <div>
               <span style="white-space: nowrap"
-                >Subscribe to this feed using:</span>
+                    id="rss_subscription_subscribe_using"></span>
             </div>
           </td>
           <td valign="top">
             <div style="margin-left:2px">
               <select id="readerDropdown" onChange="onSelectChanged()"></select>
-              <button onclick="navigate();">Subscribe Now</button><br />
+              <button onclick="navigate();"
+                      id="rss_subscription_subscribe_button"></button><br />
             </div>
           </td>
         </tr>
@@ -43,7 +57,7 @@
           <td valign="top" colspan="2">
             <span id="alwaysUseSpan" style="display:none"><input
                 type="checkbox" id="alwaysUse" value="AlwaysUse"
-                >Always use this reader to subscribe to feeds.</span>
+                ><span id="rss_subscription_always_use"></span></span>
           </td>
         </tr>
       </table>
@@ -55,10 +69,10 @@
   <div class="splitter">
     <span class="feedUrlSpan" id="feedUrlSpan">
       <span class="feedUrl"
-        >[ <a id="feedUrl" class="feedUrl"
+        >[ <a id="feedUrl" class="feedUrl" target="_blank"
               title="The feed page currently being previewed."
-           >Feed</a> ]</span></span>
-    <span><b>Feed preview</b></span>
+           ></a> ]</span></span>
+    <span><b id="rss_subscription_feed_preview"></b></span>
   </div>
   <div id="items"></div>
 </body>
